Several updates includeing xfce configs, firefox profiles, nvim profile, code cleanup, etc.

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,17 @@
 *.o
 *.a
 *.so
-*.md
 compile_commands.json
-build/
-tonarchy
+/tonarchy
+/tonarchy-static
 .cache/
+
+*.iso
+*.qcow2
+OVMF_VARS.fd
+vm-test
+retest.sh
+test-disk*
+
+result
+notes/
